--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,16 +1,52 @@
 @charset "UTF-8";
-*{
+
+* {
     margin: 0px;
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
 }
-html,body{
+html, body{
     height: 100vh;
     width: 100vw;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.408);
+}
+body{
+    background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
+    background-size: cover;
+    background-attachment: fixed;
 }
 main{
     height: 100vh;
     position: relative;
-    background-color: green;
+}
+.telefone{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+    height: 627px;
+    width: 311px;
+    background: url(../imagens/frame-iphone.png)
+     
+}
+.tela{
+    position: relative;
+    top: 60px;
+    left: 22px;
+    width: 266px;
+    height: 490px;
+}
+
+.rede-sociais img{
+    margin: 10px;
+    width: 60px;
+    border-radius: 50%;
+    box-shadow: 2px 2px solid rgba(0, 0, 0, 0.316);
+    box-sizing: border-box;
+}
+.rede-sociais img:hover {
+    border: 3px solid rgba(255, 255, 255, 0.23);
+    transform: translate(-3px,-3px);
+    transition:transform .3,border 1s;
 }
